# opq

./: .gitignore  Dockerfile  README.md  book.json  package-lock.json
.github/: ISSUE_TEMPLATE.md
box/: .gitignore  LICENSE  README.md
box-update-server/: .coafile  box_update_server.py
box/Firmware/: .gitignore  CMakeLists.txt  STM32F373CC_FLASH.ld
box/Firmware/Drivers/CMSIS/Device/ST/STM32F3xx/Source/: startup_stm32f373xc.s
box/Firmware/Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal_spi.c
box/Firmware/Inc/: peripheral_config.h  runtime_config.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
box/Firmware/Src/: newlib_stub.c  opq.c  peripheral_config.c  runtime_config.c  stm32f3xx_hal_msp.c  stm32f3xx_it.c
box/Firmware/tests/: testGPIO.c  testUart.c
box/Software/Acquisition/: CMakeLists.txt
box/Software/Acquisition/lib/: RedisInterface.hpp  ZmqInterface.hpp
box/Software/Acquisition/src/: RedisInterface.cpp  Settings.cpp  ZmqInterface.cpp  main.cpp
box/Software/Triggering/: CMakeLists.txt  Cargo.toml  build.rs  build_rpi.sh  triggering.json  triggering_service
box/Software/Triggering/box_api/: Cargo.toml  build.rs
box/Software/Triggering/box_api/src/: lib.rs  plugin.rs  types.rs
box/Software/Triggering/filters/: AntialiasDownsamplingFilter.cpp  AntialiasDownsamplingFilter.hpp  LowPassFilter.cpp
box/Software/Triggering/html/: index.html  opq.js  style.css
box/Software/Triggering/lib/: Analysis.hpp  LocalAnalysis.hpp  Pipeline.hpp  Reader.hpp  RedisSerializer.hpp  Settings.hpp  SyncQueue.hpp  TimeSeries.hpp  WebMonitor.hpp  ZMQTrigger.hpp  ZmqAcqInterface.hpp  data_buffer.hpp  data_point.hpp  opqdata.hpp  util.hpp  version.hpp
box/Software/Triggering/plugins/frequency/: Cargo.toml
box/Software/Triggering/plugins/frequency/src/: filter_coef.rs  fir.rs  lib.rs
box/Software/Triggering/plugins/print/: Cargo.toml
box/Software/Triggering/plugins/print/src/: lib.rs
box/Software/Triggering/plugins/thd/: Cargo.toml
box/Software/Triggering/plugins/thd/src/: lib.rs
box/Software/Triggering/plugins/transient/: Cargo.toml
box/Software/Triggering/plugins/transient/src/: filter_coef.rs  fir.rs  lib.rs
box/Software/Triggering/plugins/vrms/: Cargo.toml
box/Software/Triggering/plugins/vrms/src/: lib.rs
box/Software/Triggering/src/: Analysis.cpp  LocalAnalysis.cpp  Reader.cpp  RedisSerializer.cpp  Settings.cpp  WebMonitor.cpp  ZMQSerializer.cpp  ZMQTrigger.cpp  ZmqAcqInterface.cpp  capture.rs  cmd_processor.rs  config.rs  lib.rs  main.cpp  measurement_filter.rs  opqbox3.rs  plugin.rs  plugin_manager.rs  sse.rs  util.rs  window_db.rs
box/Software/Triggering/test/: Makefile  ffttest.cpp
deploy/: deploy.sh
gitbook/: README.md  SUMMARY.md  (+4 more)
ground-truth-daemon/: Cargo.toml
ground-truth-daemon/config/: ground_truth_daemon.config.json
ground-truth-daemon/src/: config.rs  main.rs
ground_truth_daemon/: .gitignore  Cargo.toml  resources.json
ground_truth_daemon/config/: ground_truth_daemon.config.json
ground_truth_daemon/src/: auth.rs  conf.rs  main.rs  mongo.rs  resources.rs  scrape.rs  scraper.rs  storage_server.rs
health/: .gitignore  CMakeLists.txt  Cargo.toml  Statistics.cpp  Statistics.h  config.json  health.py  health_mongo.txt  logfile.txt  main.cpp  requirements.txt  test_http.py
health/config/: health.config.json
health/deploy/: deploy-run.sh  deploy-transfer.sh
health/docker/: Dockerfile  docker-build-publish.sh  docker-build.sh  docker-publish.sh  docker-run.sh  run-health.sh
health/old_health/: config.json  health.py  health_mongo.txt
health/old_health/docker/: Dockerfile  docker-build.sh
health/protobuf/: opq_pb2.py
health/src/: main.rs  mongo_service_checker.rs  services.json
health/test_mongo/: comp.sh  main.cpp
makai/AcquisitionBroker/: CMakeLists.txt  Cargo.toml  acq_run  acquisition_broker_config.json  build.rs
makai/AcquisitionBroker/lib/: .SynchronizedMap.hpp.swp  DataHandler.h  MongoDriver.h  RequestHandler.h  SynchronizedMap.hpp  config.h  util.h
makai/AcquisitionBroker/proto/: opq.pb.cc  opq.pb.h  opqbox3.pb.cc  opqbox3.pb.h
makai/AcquisitionBroker/src/: .new_broker.cpp.swp  DataHandler.cc  MongoDriver.cc  RequestHandler.cc  app_to_box.rs  box_to_app.rs  broker.cc  config.cc  config.rs  constants.rs  key_parser.rs  main.rs  mongo_debug_metric.rs  new_broker.cpp
makai/AcquisitionBroker/src/proto/: opqbox3.rs
makai/TriggeringBroker/: CMakeLists.txt  Cargo.toml  trg_run  triggering_broker_config.json
makai/TriggeringBroker/lib/: config.hpp
makai/TriggeringBroker/src/: broker.cc  config.cc  config.rs  constants.rs  main.rs  mongo_debug_metric.rs
makai/TriggeringService/makai/: Cargo.toml  build.rs  makai.json
makai/TriggeringService/makai/src/: config.rs  constants.rs  event_requester.rs  main.rs  mongo.rs  overlapping_interval.rs  plugin_manager.rs  trigger_receiver.rs
makai/TriggeringService/plugins/mongo/: Cargo.toml
makai/TriggeringService/plugins/mongo/src/: lib.rs
makai/TriggeringService/plugins/napali_trigger/: Cargo.toml
makai/TriggeringService/plugins/napali_trigger/src/: f_metric.rs  lib.rs  metric_buffer.rs  rms_metric.rs  thd_metric.rs  trans_metric.rs  types.rs  vector_buffer.rs
makai/TriggeringService/plugins/threshold_trigger/: Cargo.toml
makai/TriggeringService/plugins/threshold_trigger/src/: config.rs  datetime.rs  fsm.rs  lib.rs  metrics.rs  mongo.rs  threshold_trigger_metrics.html  thresholds.rs
mauka/mauka_native/: Cargo.toml
mauka/mauka_native/src/: analysis.rs  arrays.rs  ieee1159_voltage.rs  lib.rs  test_utils.rs  thd.rs
mauka/mauka_native/src/native/: arrays.rs
mauka/native/mauka_native_py/: Cargo.toml
mauka/native/mauka_native_py/src/: lib.rs
util/MakaiReader/: CMakeLists.txt  Makefile  main.cpp
util/MakaiWriter/: CMakeLists.txt  main.cpp
util/makai/box_trigger/: Cargo.toml
util/makai/box_trigger/src/: box_command.rs  box_response.rs  main.rs  util.rs
util/makai/store_event/: Cargo.toml  store_event.json
util/makai/store_event/src/: config.rs  error_type.rs  main.rs  store_event.rs
util/opqhealth/: CMakeLists.txt  main.cpp
(+1509 files in other folders)
