[package]
name = "ground-truth-daemon"
version = "0.1.0"
authors = ["anthonyjchriste <achriste@hawaii.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
serde = "1.0.98"
serde_json = "1.0.40"
base64 = "0.10.1"