[package]
name = "ground_truth_daemon"
version = "0.1.0"
authors = ["anthonyjchriste <achriste@hawaii.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.19"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
scraper = "0.10.1"
regex = "1.2.1"
chrono = "0.4.7"
log = "0.4.8"
env_logger = "0.6.2"