[package]
name = "ground_truth_daemon"
version = "0.1.0"
authors = ["anthonyjchriste <achriste@hawaii.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
scraper = "0.10"
regex = "1.2"
chrono = "0.4"
log = "0.4"
env_logger = "0.6"
