[package]
name = "rust_lib_sandbox"
version = "0.1.0"
authors = ["anthonyjchriste <achriste@hawaii.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mauka_native"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]
