[package]
name = "triggering_v3"
version = "0.1.5"
authors = ["sin"]

[build-dependencies]
protoc-rust = "1.4"
serde_json = "1.0"

[dependencies]
protobuf="1.3"
serde_json = "*"
serde_derive = "*"
serde = "*"
zmq="0.8.2"
#network-manager="*"
uptime_lib ="*"
libloading = "*"
log = "0.4.0"
syslog = "4"
crossbeam-channel = "0.2"
nix = "0.13.0"
box_api = { path = "box_api" }
frequency_plugin = { path = "plugins/frequency" }
thd_plugin = {path = "plugins/thd"}
vrms_plugin = {path = "plugins/vrms"}
