[package]
name = "makai"
version = "0.1.0"
authors = ["Serge <sin8@hawaii.edu>"]

[build-dependencies]
protoc-rust = "1.4"

[dependencies]
zmq = "0.8"
protobuf="1.3"
bson = "*"
mongodb = "*"
chrono = "0.4"
time = "0.1"
pub-sub = "*"
num = "*"
serde_json = "1.0"
serde_derive = "*"
serde = "*"
libloading = "0.4.2"

opqapi = {path = "../opqapi"}
