[package]
name = "mauka_native_py"
version = "0.1.1"
authors = ["opq <achriste@hawaii.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mauka_native_py"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]

[dependencies]
mauka_native = { path = "../mauka_native" }
