[package]
name = "box_trigger"
version = "0.1.0"
authors = ["Serge <sin8@hawaii.edu>"]
edition = "2018"

[build-dependencies]
protoc-rust = "1.4"
serde_json = "1.0"

[dependencies]
zmq = "0.8"
protobuf="1.3"
chrono = "0.4"
time = "0.1"
pub-sub = "*"
num = "*"
serde_json = "1.0"
serde_derive = "*"
serde = "*"
libloading = "0.4.2"
mongodb = "0.3"
bson = "0.13"
lazy_static = "1.2.0"
uuid = { version = "0.7", features = ["v4"] }
