[package]
name = "store_event"
version = "0.1.0"
authors = ["Sergey Negrashov <sin8@hawaii.edu>"]
edition = "2018"

[dependencies]
zmq = "0.8"
serde_json = "1.0"
serde_derive = "*"
serde = "*"
mongodb = "0.4.0"
bson = "0.14"
tokio = "0.2.0-alpha.6"
futures = "0.3.1"
failure = "0.1.6"
failure_derive = "0.1.6"