[package]
name = "mongo_plugin"
version = "0.1.0"
authors = ["Serge <sin8@hawaii.edu>"]
edition = "2018"

[dependencies]
triggering_service = { path = "../../" }
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
mongodb = "0.3.11"
chrono = "0.4"

[lib]
name = "mongo_plugin"
crate-type = [
    "dylib"
]
